hard-gists/8497c831c0a37ec4060b/run.log
=== Docker Run Log for 8497c831c0a37ec4060b ===
Started at: Mi 29. Okt 17:49:47 CET 2025

[2025-10-29 17:49:48] START: Running container for 8497c831c0a37ec4060b
[2025-10-29 17:49:48] SUCCESS: Container 9878e9632318485019a95742771e6b6b74001fa6dae2ca10dd1689599e87f628 started for 8497c831c0a37ec4060b
=== Container logs for 8497c831c0a37ec4060b ===
  File "/snippet.py", line 111
    print "START"
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8497c831c0a37ec4060b ===
[2025-10-29 17:49:50] INFO: Container 9878e9632318485019a95742771e6b6b74001fa6dae2ca10dd1689599e87f628 has stopped
